# thesis_dev

./: .gitignore  .gitmodules  Makefile  data_analysis_and_preproc.ipynb  data_prep.ipynb  pyproject.toml  requirements.txt
1_data_analysis_and_preproc/: wind.ipynb
2_models/with_clean_data/solar/: density_based.ipynb  hierarchical_cluster.ipynb  hierarchical_cluster_opt.ipynb  model_based.ipynb  model_based_opt.ipynb  partition_cluster.ipynb  partition_cluster_opt.ipynb
2_models/with_clean_data/wind/: clusters.r  density_based.ipynb  hierarchical_cluster.ipynb  hierarchical_cluster_opt.ipynb  model_based.ipynb  model_based_opt.ipynb  partition_cluster.ipynb  partition_cluster_opt.ipynb
2_models/with_raw data/solar/: density_based.ipynb  hierarchical_cluster.ipynb  hierarchical_cluster_opt.ipynb  partition_cluster.ipynb  partition_cluster_opt.ipynb
2_models/with_raw data/wind/: density_based.ipynb  hierarchical_cluster.ipynb  hierarchical_cluster_opt.ipynb  model_based.ipynb  partition_cluster_opt.ipynb
2_models/with_raw_data/solar/: density_based.ipynb  hierarchical_cluster.ipynb  hierarchical_cluster_opt.ipynb  (+4 more)
3_evaluation/: clean_solar.ipynb  clean_wind.ipynb  raw_solar.ipynb  raw_wind.ipynb  wind_comparison.ipynb
4_ensemble_models/: clean_solar.ipynb  clean_wind.ipynb  raw_solar.ipynb  raw_wind.ipynb
5_time_series_clustering/: clean_solar.ipynb
5_time_series_clustering/all_imp_vars/: clean_solar.ipynb  clean_wind.ipynb  raw_solar.ipynb  raw_wind.ipynb
data_analysis_and_preproc/: global.ipynb  wind.ipynb
models/wind/: modeling_wind.ipynb
(+58 files in other folders)
